[package]
name = "tickets"
version = "0.1.0"
authors = ["Don Kim <dgkimdev@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "1.0"
exitcode = "1"
structopt = { version = "0.2", default-features = false }

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"

[[bin]]
name = "tickets"
path = "src/main.rs"
